--- a/uninstall.cmake.in
+++ b/uninstall.cmake.in
@@ -3,5 +3,5 @@ message("Uninstalling...")
 set(EXECUTABLE_NAME "@EXECUTABLE_NAME@")
 set(CMAKE_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@")
 execute_process(COMMAND ${CMAKE_COMMAND} -E remove ${CMAKE_INSTALL_PREFIX}/bin/${EXECUTABLE_NAME}
-                COMMAND ${CMAKE_COMMAND} -E remove_directory ${CMAKE_INSTALL_PREFIX}/bin/src)
+                COMMAND ${CMAKE_COMMAND} -E remove_directory ${CMAKE_INSTALL_PREFIX}/bin/lib)
 
