--- a/src/scheduler_runner/schedulers/CMakeLists.txt
+++ b/src/scheduler_runner/schedulers/CMakeLists.txt
@@ -16,6 +16,21 @@ foreach(src_file ${SCHEDULERS_SOURCE_FILES})
     set(target_name "${src_name}")
     add_library(${target_name} MODULE ${src_file})
     target_link_libraries(${target_name} PRIVATE qdmi)
-    install(TARGETS ${target_name} DESTINATION "${INSTALL_PATH}/bin/lib/scheduler_runner/schedulers")
+    
+    # Set RPATH for this scheduler
+    set_target_properties(${target_name} PROPERTIES
+        INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/bin/lib/qdmi"
+        INSTALL_RPATH_USE_LINK_PATH TRUE)
+
+    # Set include directories for the library
+    target_include_directories(${target_name}
+        PRIVATE 
+        ${CUSTOM_QDMI_PATH}/qdmi)
+
+    # Install the shared library
+    install(TARGETS ${target_name} 
+        DESTINATION 
+        "${INSTALL_PATH}/bin/lib/scheduler_runner/schedulers")
+
 endforeach()
 
