--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,8 +31,9 @@ analyze:
   stage: test
   script:
     - apt update
-    - apt install -y llvm libopenmpi-dev clang 
+    - apt install -y llvm rabbitmq-server libopenmpi-dev clang 
     - export LLVM_INCLUDE_PATH=$(llvm-config --includedir)
+    - make build_rabbitmq
     - find src -name "*.cpp" -exec clang --analyze -I$LLVM_INCLUDE_PATH -Iqdmi/ {} \;
 
 run_tests:
@@ -45,6 +46,6 @@ run_tests:
 check-format:
   stage: analysis
   script:
-    - files_list=$(find . -type f -regex '.*\.\(c\|cc\|cxx\|cpp\|h\|hpp\|hxx\)$')
+    - files_list=$(find src -type f -regex '.*\.\(c\|cc\|cxx\|cpp\|h\|hpp\|hxx\)$')
     - clang-format ${files_list} --style=LLVM --Werror --dry-run --verbose --ferror-limit=5
 
