--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ analyze:
     - apt install -y llvm rabbitmq-server libopenmpi-dev clang 
     - export LLVM_INCLUDE_PATH=$(llvm-config --includedir)
     - make build_rabbitmq
-    - find src -name "*.cpp" -exec clang --analyze -I$LLVM_INCLUDE_PATH -Iqdmi/ {} \;
+    - find src -name "*.cpp" -exec clang --analyze -I$LLVM_INCLUDE_PATH -Isrc/pass_runner/headers -Iqdmi/ {} \;
 
 run_tests:
   stage: test
