Replaced bash shell script for source code formatting with pre-commit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,12 +11,13 @@ repos:
       name: clang-format
       description: Format C code using clang-format.
       language: system
-      files: \b(src\/.*\.(c|cc|cxx|cpp|h|hpp|hxx))\b
+#      files: \b(src\/.*\.(c|cc|cxx|cpp|h|hpp|hxx))\b
+      files: \.(c|cc|cxx|cpp|h|hpp|hxx)$
       entry: clang-format -i
       args: ["-style=LLVM"]
     - id: cmake-format
       name: cmake-format
-      description: cmake-format can format your listfiles nicely so that they don't look like crap.
+      description: cmake-format applies the right formatting to the source code
       entry: cmake-format
       args: [--in-place]
       language: python
