--- a/src/pass_runner/passes/CMakeLists.txt
+++ b/src/pass_runner/passes/CMakeLists.txt
@@ -65,24 +65,25 @@ set(ANALYSIS_PASSES_SOURCE_FILES
 set(CMAKE_INSTALL_RPATH "${INSTALL_PATH}/bin/lib/pass_runner/passes")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
-# Compile each pass as a shared object and link it to qdmi
+# Compile each pass as a shared object and link it to FoMaC
 foreach(src_file ${ANALYSIS_PASSES_SOURCE_FILES})
   get_filename_component(src_name ${src_file} NAME_WE)
   set(target_name "${src_name}Pass")
 
   add_library(${target_name} SHARED ${src_file})
 
-  # Link the library with qdmi
-  target_link_libraries(${target_name} PRIVATE qdmi)
+  # Link the library with FoMaC
+  target_link_libraries(${target_name} PRIVATE FoMaC qdmi)
 
-  # Set RPATH for this scheduler
+  # Set RPATH for this pass
   set_target_properties(
     ${target_name}
-    PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/bin/lib/qdmi"
+    PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/bin/lib/fomac"
                INSTALL_RPATH_USE_LINK_PATH TRUE)
 
   # Set include directories for the library
-  target_include_directories(${target_name} PRIVATE ${CUSTOM_QDMI_PATH}/qdmi)
+  target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR}/src/qdmi
+                                                    ${CUSTOM_FOMAC_PATH})
 
   # Install the shared library
   install(TARGETS ${target_name}
@@ -90,27 +91,27 @@ foreach(src_file ${ANALYSIS_PASSES_SOURCE_FILES})
 
 endforeach()
 
-# Compile each pass as a shared object and link it to qdmi and all analysis
+# Compile each pass as a shared object and link it to FoMaC and all analysis
 # passes
 set(INSTALL_LIB_PATHS "${CMAKE_INSTALL_PREFIX}/bin/lib/pass_runner/passes;"
-                      "${CMAKE_INSTALL_PREFIX}/bin/lib/qdmi")
+                      "${CMAKE_INSTALL_PREFIX}/bin/lib/fomac")
 string(REPLACE ";" "\\;" RLIBPATHS "${INSTALL_LIB_PATHS}")
 foreach(src_file ${PASSES_SOURCE_FILES})
   get_filename_component(src_name ${src_file} NAME_WE)
   set(target_name "${src_name}Pass")
-
   add_library(${target_name} MODULE ${src_file})
 
-  # Link the library with qdmi
-  target_link_libraries(${target_name} PRIVATE qdmi)
+  # Link the library with FoMaC and QDMI
+  target_link_libraries(${target_name} PRIVATE FoMaC qdmi)
 
-  # Set RPATH for this scheduler
+  # Set RPATH for this pass
   set_target_properties(
     ${target_name} PROPERTIES INSTALL_RPATH ${RLIBPATHS}
                               INSTALL_RPATH_USE_LINK_PATH TRUE)
 
   # Set include directories for the library
-  target_include_directories(${target_name} PRIVATE ${CUSTOM_QDMI_PATH}/qdmi)
+  target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR}/src/qdmi
+                                                    ${CUSTOM_FOMAC_PATH})
 
   # Install the shared library
   install(TARGETS ${target_name}
