--- a/fomac/CMakeLists.txt
+++ b/fomac/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 # Define the library
 add_library(FoMaC MODULE fomac.cpp)
 
-# Set include directories target_link_libraries(FoMaC PRIVATE qdmi)
+# Set include directories
 target_include_directories(FoMaC PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(FoMaC PRIVATE ../src/qdmi)
 
