--- a/src/scheduler_runner/schedulers/CMakeLists.txt
+++ b/src/scheduler_runner/schedulers/CMakeLists.txt
@@ -10,22 +10,20 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 # Compile each scheduler as a shared object
 foreach(src_file ${SCHEDULERS_SOURCE_FILES})
   get_filename_component(src_name ${src_file} NAME_WE)
-  set(target_name "${src_name}")
-  add_library(${target_name} MODULE ${src_file})
-  target_link_libraries(${target_name} PRIVATE FoMaC qdmi)
+  add_library(${src_name} MODULE ${src_file})
+  target_link_libraries(${src_name} PRIVATE FoMaC qdmi)
 
   # Set RPATH for this scheduler
   set_target_properties(
-    ${target_name}
-    PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/bin/lib/fomac"
-               INSTALL_RPATH_USE_LINK_PATH TRUE)
+    ${src_name} PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/bin/lib/fomac"
+                           INSTALL_RPATH_USE_LINK_PATH TRUE)
 
   # Set include directories for the library
-  target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR}/src/qdmi
-                                                    ${CUSTOM_FOMAC_PATH})
+  target_include_directories(${src_name} PRIVATE ${CMAKE_SOURCE_DIR}/src/qdmi
+                                                 ${CUSTOM_FOMAC_PATH})
 
   # Install the shared library
-  install(TARGETS ${target_name}
+  install(TARGETS ${src_name}
           DESTINATION "${INSTALL_PATH}/bin/lib/scheduler_runner/schedulers")
 
 endforeach()
