Add pass replacing consequential Swap and Cnot

--- a/src/pass_runner/passes/CMakeLists.txt
+++ b/src/pass_runner/passes/CMakeLists.txt
@@ -46,6 +46,7 @@ set(PASSES_SOURCE_FILES
     # S
     QirSDaggerToS.cpp
     QirSToSDagger.cpp
+    QirSwapAndCnotReplacement.cpp
     QirSwapToCnotsDecomposition.cpp
     # U
     QirU3ToRzRyRzDecomposition.cpp
