--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ analyze:
   stage: test
   script:
     - apt update
-    - apt install -y llvm rabbitmq-server libopenmpi-dev clang
+    - apt install -y llvm rabbitmq-server libopenmpi-dev clang nlohmann-json3-dev
     - export LLVM_INCLUDE_PATH=$(llvm-config --includedir)
     - make build_rabbitmq
     - find src -name "*.cpp" -exec clang --analyze -I$LLVM_INCLUDE_PATH -Isrc/pass_runner/headers -Isrc/qdmi -Ifomac -Ibackends -Xclang -analyzer-output=text {} \; 2>&1 | grep -E '(warning|error):'
