--- a/src/pass_runner/passes/CMakeLists.txt
+++ b/src/pass_runner/passes/CMakeLists.txt
@@ -56,19 +56,17 @@ set(PASSES_SOURCE_FILES
     QirZGateAndHadamardSwitch.cpp
 ]]
     #
-    QirZYZTransform.cpp)
+    QirU3Decomposition.cpp QirXYXDecomposition.cpp QirZXZDecomposition.cpp)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../headers)
 
 # Include all analysis passes here
-#[[
+
 set(ANALYSIS_PASSES_SOURCE_FILES
     # A
     QirAllocationAnalysis.cpp
     # F
-    QirFunctionValidation.cpp)
-]]
-#
+    QirFunctionValidation.cpp QirZYZDecomposition.cpp)
 
 # Set RPATH for the shared libraries in this directory
 set(CMAKE_INSTALL_RPATH "${INSTALL_PATH}/bin/lib/pass_runner/passes")
@@ -113,7 +111,7 @@ foreach(src_file ${PASSES_SOURCE_FILES})
   get_filename_component(src_name ${src_file} NAME_WE)
   set(target_name "${src_name}Pass")
 
-  add_library(${target_name} MODULE ${src_file})
+  add_library(${target_name} SHARED ${src_file})
 
   # Link the library with qdmi
   target_link_libraries(${target_name} PRIVATE qdmi utilities)
@@ -135,9 +133,9 @@ foreach(src_file ${PASSES_SOURCE_FILES})
 endforeach()
 
 # Analysis passes invoked from custom passes have to be linked to the custom
-# pass
-target_link_libraries(QirZYZTransformPass PRIVATE utilities)
-# target_link_libraries(QirQubitRemapPass PRIVATE QirAllocationAnalysisPass)
-
-# target_link_libraries(QirResourceAnnotationPass PRIVATE
-# QirAllocationAnalysisPass)
+# pass target_link_libraries(QirQubitRemapPass PRIVATE
+# QirAllocationAnalysisPass) target_link_libraries(QirResourceAnnotationPass
+# PRIVATE QirAllocationAnalysisPass)
+target_link_libraries(QirZXZDecompositionPass PRIVATE QirZYZDecompositionPass)
+target_link_libraries(QirXYXDecompositionPass PRIVATE QirZYZDecompositionPass)
+target_link_libraries(QirU3DecompositionPass PRIVATE QirZYZDecompositionPass)
