--- a/src/pass_runner/passes/CMakeLists.txt
+++ b/src/pass_runner/passes/CMakeLists.txt
@@ -76,6 +76,12 @@ set(ANALYSIS_PASSES_SOURCE_FILES
 set(CMAKE_INSTALL_RPATH "${INSTALL_PATH}/bin/lib/pass_runner/passes")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
+add_library(utilities SHARED utilities.cpp)
+
+# Install the shared library
+install(TARGETS utilities
+        DESTINATION "${INSTALL_PATH}/bin/lib/pass_runner/passes")
+
 # Compile each pass as a shared object and link it to FoMaC
 foreach(src_file ${ANALYSIS_PASSES_SOURCE_FILES})
   get_filename_component(src_name ${src_file} NAME_WE)
@@ -84,7 +90,7 @@ foreach(src_file ${ANALYSIS_PASSES_SOURCE_FILES})
   add_library(${target_name} SHARED ${src_file})
 
   # Link the library with FoMaC
-  target_link_libraries(${target_name} PRIVATE FoMaC qdmi)
+  target_link_libraries(${target_name} PRIVATE FoMaC qdmi utilities)
 
   # Set RPATH for this pass
   set_target_properties(
@@ -94,14 +100,13 @@ foreach(src_file ${ANALYSIS_PASSES_SOURCE_FILES})
 
   # Set include directories for the library
   target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR}/src/qdmi
-                                                    ${CUSTOM_FOMAC_PATH})
+  ${CUSTOM_FOMAC_PATH})
 
   # Install the shared library
   install(TARGETS ${target_name}
           DESTINATION "${INSTALL_PATH}/bin/lib/pass_runner/passes")
 
 endforeach()
-
 # Compile each pass as a shared object and link it to FoMaC and all analysis
 # passes
 set(INSTALL_LIB_PATHS "${CMAKE_INSTALL_PREFIX}/bin/lib/pass_runner/passes;"
@@ -110,10 +115,10 @@ string(REPLACE ";" "\\;" RLIBPATHS "${INSTALL_LIB_PATHS}")
 foreach(src_file ${PASSES_SOURCE_FILES})
   get_filename_component(src_name ${src_file} NAME_WE)
   set(target_name "${src_name}Pass")
-  add_library(${target_name} MODULE ${src_file})
+  add_library(${target_name} SHARED ${src_file})
 
   # Link the library with FoMaC and QDMI
-  target_link_libraries(${target_name} PRIVATE FoMaC qdmi)
+  target_link_libraries(${target_name} PRIVATE FoMaC qdmi utilities)
 
   # Set RPATH for this pass
   set_target_properties(
@@ -122,7 +127,7 @@ foreach(src_file ${PASSES_SOURCE_FILES})
 
   # Set include directories for the library
   target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR}/src/qdmi
-                                                    ${CUSTOM_FOMAC_PATH})
+  ${CUSTOM_FOMAC_PATH})
 
   # Install the shared library
   install(TARGETS ${target_name}
